<resources>
    <string name="app_name">Spacing</string>
    <string name="hey">Hey !</string>
    <string name="what_are_you_looking_upto">What are you looking upto</string>
    <string name="home_search">Home Search</string>
    <string name="buy_rent_and_pg_co_living">Buy, Rent and PG/Co-Living</string>
    <string name="post_your_property">Post Your Property</string>
    <string name="sell_or_rent_out_your_home">Sell or Rent out your home</string>
    <string name="skip">Skip</string>
    <string name="explore_latest_properties">Explore Latest Properties</string>
    <string name="checkout_resale_new_projects"><![CDATA[Check out Rent, Resale & New Projects]]></string>
    <string name="explore_neighbourhood">Explore Neighbourhood</string>
    <string name="park_hospital_atms_gyms_malls_and_much_more">Park, Hospital, ATMs, Gyms, Malls and much more</string>
    <string name="share_your_details_interest_to_instantly_close_the_deal"><![CDATA[Share your details & interest to instantly close the deal]]></string>
    <string name="instantly_connect_with_sellers">Instantly Connect with Sellers</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="mobilecode_india">+91</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="tell_is_your_requirements">Tell us your requirements!</string>
    <string name="rent">Rent</string>
    <string name="no_string_attached">No string attached</string>
    <string name="buy">Buy</string>
    <string name="pg_co_living">PG/Co-living</string>
    <string name="be_a_proud_owner">Be a proud owner</string>
    <string name="freinds_and_freedom">Freinds and freedom</string>
    <string name="i_m_looking_for">I\'m looking for</string>
    <string name="submit">Submit</string>
    <string name="looking_to_rent_in">Looking to Rent in</string>
    <string name="select_city">Select City</string>
    <string name="search_for_your_city_here">Search for your city here</string>
    <string name="use_my_current_location">Use my current Location</string>
    <string name="popular_cities">Popular Cities</string>
    <string name="select_locality">Select Locality</string>
    <string name="select_preferred_locality_or_landamrk">Select preferred Locality or Landmark</string>
    <string name="search_for_your_locality">Search for your Locality</string>
    <string name="top_localities">Top Localities</string>
    <string name="select_budget">Select Budget</string>
    <string name="total_properties_2_4k">Total Properties: 2.4K</string>
    <string name="select_your_budget">Select your Budget</string>
    <string name="next">Next</string>
    <string name="_5k">5k</string>
    <string name="_6k">6k</string>
    <string name="select_configuration">Select Configuration</string>
    <string name="_1rk">1Rk</string>
    <string name="_1bhk">1BHK</string>
    <string name="_2bhk">2Bhk</string>
    <string name="_3bhk">3BHK</string>
    <string name="view_properties">View Properties</string>
    <string name="places_api_key">AIzaSyBsICl5gNAOcocLPEuaBCU693xtZUryg9Ys</string>
    <string name="mobile_number_empty">Mobile Number Must Not be empty</string>
    <string name="mobile_number_length_smaller">Mobile number must be of 10 digits</string>
    <string name="mobile_number_regex_not_valid">Mobile Number should start with 6,7,8 or 9</string>
    <string name="_3bhkplus">3Bhk+</string>
    <string name="no_matching_property">No matching property found, Try again with different filters</string>
    <string name="wait__">Please wait..</string>
    <string name="Rs">\u20B9</string>
</resources>